methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:7: error: Unmatched closing brace '}' ignored here
     };else if (getCouleurSol() == Color.green) {
     ^SlugTracking:7: error: ';' expected but 'else' found.
     };else if (getCouleurSol() == Color.green) {
       ^