methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var vuBiscuit : Boolean = false
  while (vuBiscuit == false) {
    if (estFaceMur() == true) {
     return false
   	};else if (getCouleurSol() == Color.green) {
      
    }
      
    }
   }
 }     
